@startuml header

class Game {
  - currentPlayer: Player
  - supplyPiles: Map<Card, Integer>
  - trash: List<Card>
  + playTurn(): void
  + getWinner(): Player
}

class Player {
  
  - actions: Integer
  - buys: Integer
  - coins: Integer
  - victoryPoints: Integer
  
  + draw(numCards: Integer): List<Card>
  + playCard(card: Card): void
  + buyCard(card: Card): void
  + endTurn(): void
}


class Card {
  - position : vec3
}

class Type {
  - uvs : vec4
  - cost: Integer
  - name: String
  + onDraw(player: Player): void
  + onAddToDeck(player: Player): void
  + onPlay(player: Player) void
  + onDiscard(player: Player): void
  + onTrash(player: Player): void
}

Player "1" -- "*" Card : hand,deck,discard
Player "1..*" -- "1" Game : players
Card "*" -- "1" Type : type





@enduml

